--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AspireBank">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.welcome.WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true">
+        </activity>
+
+
+        <activity
+            android:name=".ui.homecustomer.HomeCustomerActivity"
+            android:exported="true">
+        </activity>
+
+
     </application>
 
 </manifest>
