--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,17 @@
         </activity>
 
 
+        <activity
+            android:name=".ui.depositphone.DepositPhoneActivity"
+            android:exported="true">
+        </activity>
+
+
+        <activity
+            android:name=".ui.receiptpayment.ReceiptPaymentActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
