--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,17 @@
             android:exported="true">
         </activity>
 
+
+        <activity
+            android:name=".ui.notification.NotificationActivity"
+            android:exported="true">
+        </activity>
+
+
+        <activity
+            android:name=".ui.map.MapActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
