--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
-    <meta-data
-        android:name="com.google.android.gms.version"
-        android:value="@integer/google_play_services_version" />
 
 
     <application
@@ -16,6 +16,29 @@
         android:roundIcon="@mipmap/ic_logo_bank"
         android:supportsRtl="true"
         android:theme="@style/Theme.AspireBank">
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key"/>
+
+        <activity android:name=".ui.login.LoginActivity" />
+
+        <activity android:name=".ui.homecustomer.HomeCustomerActivity" />
+
+        <activity android:name=".ui.bookroom.BookRoomActivity" />
+        <activity android:name=".ui.bookroom.BookRoomCheck" />
+        <activity android:name=".ui.bookroom.BookRoomList" />
+        <activity android:name=".ui.bookroom.BookRoomMap" />
+        <activity android:name=".ui.bookroom.BookRoomSuccess" />
+        <activity android:name=".ui.bookroom.BookRoomVerify" />
+
+        <activity android:name=".ui.depositphone.DepositPhoneActivity" />
+        <activity android:name=".ui.receiptpayment.ReceiptPaymentActivity" />
+        <activity android:name=".ui.notification.NotificationActivity" />
+        <activity android:name=".ui.bookticket.BookTicketActivity" />
+
+
         <activity
             android:name=".ui.welcome.WelcomeActivity"
             android:exported="true">
@@ -26,40 +49,5 @@
         </activity>
 
 
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="true">
-        </activity>
-
-
-        <activity
-            android:name=".ui.homecustomer.HomeCustomerActivity"
-            android:exported="true">
-        </activity>
-
-
-        <activity
-            android:name=".ui.depositphone.DepositPhoneActivity"
-            android:exported="true">
-        </activity>
-
-
-        <activity
-            android:name=".ui.receiptpayment.ReceiptPaymentActivity"
-            android:exported="true">
-        </activity>
-
-
-        <activity
-            android:name=".ui.notification.NotificationActivity"
-            android:exported="true">
-        </activity>
-
-
-        <activity
-            android:name=".ui.map.MapActivity"
-            android:exported="true">
-        </activity>
     </application>
-
 </manifest>
