--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ android.nonTransitiveRClass=true
 
 AMADEUS_API_KEY=r7wUAXuzke8rEFSsfpK16pJGslRVfxvE
 AMADEUS_API_SECRET=nPrCzQyMlOAFrWjV
+DUFFEL_API_KEY=duffel_test_UtLC65waDh-2fEHG40h0EIsO181fYEuob3FdvPypVD7
