--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+android.enableJetifier=true
+
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
@@ -22,4 +24,5 @@ android.nonTransitiveRClass=true
 
 AMADEUS_API_KEY=r7wUAXuzke8rEFSsfpK16pJGslRVfxvE
 AMADEUS_API_SECRET=nPrCzQyMlOAFrWjV
+
 DUFFEL_API_KEY=duffel_test_UtLC65waDh-2fEHG40h0EIsO181fYEuob3FdvPypVD7
