Refactor: Add Repository pattern for Rate and User, finish Register flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,5 +72,9 @@
         <activity android:name=".ui.savings.SavingsConfirmActivity" />
         <activity android:name=".ui.savings.SavingsSuccessActivity" />
 
+        <activity android:name=".ui.register.RegisterActivity" />
+        <activity android:name=".ui.register.RegisterFaceAuthActivity" />
+        <activity android:name=".ui.register.RegisterSuccessActivity" />
+
     </application>
 </manifest>
