Done test Savings, Mortgage, Register

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity android:name=".ui.savings.SavingsActivity" />
         <activity android:name=".ui.savings.SavingsConfirmActivity" />
         <activity android:name=".ui.savings.SavingsSuccessActivity" />
+        <activity android:name=".ui.savings.SavingsVerifyOTP"/>
 
         <activity android:name=".ui.register.RegisterActivity" />
         <activity android:name=".ui.register.RegisterFaceAuthActivity" />
