--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,5 +77,8 @@
         <activity android:name=".ui.register.RegisterFaceAuthActivity" />
         <activity android:name=".ui.register.RegisterSuccessActivity" />
 
+        <activity android:name=".ui.transfer.TransferActivity" />
+        <activity android:name=".ui.transfer.TransferVerifyOTP" />
+        <activity android:name=".ui.transfer.TransferSuccessActivity" />
     </application>
 </manifest>
